fixed arsenal heading font size on mobile devices and added animation to footer gradient background

--- a/src/Components/Styles/Arsenal.css
+++ b/src/Components/Styles/Arsenal.css
@@ -19,7 +19,8 @@
     left: 10%;
     z-index: 4;
     font-weight: 600;
-    font-size: 1.9rem;
+    font-size: 1.6rem;
+    opacity: 0.8;
 }
 
 
